# blue-core

./: .bashrc  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  fluent-bit.conf
src/: main.rs
