[package]
name = "blue-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
blue-rust = { git = "https://github.com/permalik/blue-rust.git" }
chrono = { version = "0.4" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.142"
